[metadata]
name = localbinder
version = 0.0.1-pre
description = localbinder
long_description = file: README.md
long_description_content_type = text/markdown
license = Apache-2.0
author = yacchin1205
classifiers =
    Development Status :: 3 - Alpha
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3.9

[options]
packages = find:
install_requires =
    binderhub
    jupyter-repo2docker
